# nnrika

./: .gitignore  hello.py  moondream.ipynb  pyproject.toml
src/: hello.py  settings.py
